cortex/monitoring/00-cortex-consul.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
spec:
  replicas: 1
  selector:
    matchLabels:
      name: consul
  template:
    metadata:
      labels:
        name: consul
    spec:
      containers:
      - name: consul
        image: consul:0.7.1
        imagePullPolicy: IfNotPresent
        args:
        - agent
        - -ui
        - -server
        - -client=0.0.0.0
        - -bootstrap
        ports:
        - name: server-noscrape
          containerPort: 8300
        - name: serf-noscrape
          containerPort: 8301
        - name: client-noscrape
          containerPort: 8400
        - name: http-noscrape
          containerPort: 8500
---
apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  ports:
  - name: http
    port: 8500
  selector:
    name: consul
