cortex/monitoring/cortex-dynamodb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb
spec:
  replicas: 1
  selector:
    matchLabels:
      name: dynamodb
  template:
    metadata:
      labels:
        name: dynamodb
      annotations:
        prometheus.io.scrape: "false"
    spec:
      containers:
      - name: dynamodb
        image: amazon/dynamodb-local:1.11.477
        imagePullPolicy: IfNotPresent
        args: ['-jar', 'DynamoDBLocal.jar', '-inMemory', '-sharedDb']
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: dynamodb
spec:
  ports:
    - port: 8000
  selector:
    name: dynamodb
