cortex/monitoring/cortex-table-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: table-manager
    app.kubernetes.io/instance: cortex
    app.kubernetes.io/name: cortex
  name: cortex-table-manager
  namespace: monitoring
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: table-manager
      app.kubernetes.io/instance: cortex
      app.kubernetes.io/name: cortex
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:      
      annotations:
        prometheus.io/port: http-metrics
        prometheus.io/scrape: ""
      labels:
        app.kubernetes.io/component: table-manager
        app.kubernetes.io/instance: cortex
        app.kubernetes.io/name: cortex
    spec:
      affinity: {}
      containers:
      - args:
        - -target=table-manager
        - -config.file=/etc/cortex/cortex.yaml
        image: quay.io/cortexproject/cortex:v1.9.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: http-metrics
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: cortex
        ports:
        - containerPort: 8080
          name: http-metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: http-metrics
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          readOnlyRootFilesystem: true
        startupProbe:
          failureThreshold: 10
          httpGet:
            path: /ready
            port: http-metrics
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/cortex
          name: config
        - mountPath: /data
          name: storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: cortex
      serviceAccountName: cortex
      terminationGracePeriodSeconds: 180
      volumes:
      - name: config
        configMap:
          name: cortex
      - emptyDir: {}
        name: storage
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: table-manager
    app.kubernetes.io/instance: cortex
    app.kubernetes.io/name: cortex
  name: cortex-table-manager
  namespace: monitoring
spec:
  clusterIP:
  clusterIPs:
  ports:
  - name: http-metrics
    port: 8080
    protocol: TCP
    targetPort: http-metrics
  selector:
    app.kubernetes.io/component: table-manager
    app.kubernetes.io/instance: cortex
    app.kubernetes.io/name: cortex
  sessionAffinity: None
  type: ClusterIP
