cortex/monitoring/ingress-cortex-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cortex-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"    
spec:
  tls:
    - hosts:
      - nginx.172.31.14.138.nip.io
      secretName: nip-tls
  rules:
    - host: nginx.172.31.14.138.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cortex-nginx
                port:
                  number: 80
